<resources>
    <string name="app_name">Packagefind</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_login">login</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_account_here">, Crea una aquí</string>
    <string name="hint_email">correo electrónico</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="button_create_account">Únete</string>
    <string name="toolbar_title_createaccount">Crear Cuenta</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="username_card">Adrián</string>
    <string name="firsword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Mi perfil</string>
    <string name="hint_search_profile">Buscar...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="appbar_scrolling_view_behaivor">64dp</string>
    <string name="back_message">Pulsa otra vez para salir</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">\"Tomo copas en la playa\"</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas \"Letraset\", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="transitionname_picture">transitionname_picture</string>
</resources>
